# django_fox

./: README.md  pyproject.toml  pytest.ini  requirements.txt
caps/models/: agent.py
caps/tests/models/: reference.py
fox/caps/: README.md  __init__.py  apps.py  middleware.py  permissions.py
fox/caps/models/: __init__.py  agent.py  capability.py  capability_set.py  object.py  reference.py
fox/caps/tests/: conftest.py  test_model_object.py  test_model_reference.py
fox/caps/tests/app/: apps.py  models.py
fox/caps/tests/models/: __init__.py  agent.py  capability.py  capability_set.py  object.py  reference.py  test_agent.py  test_capability.py  test_capability_set.py  test_object.py  test_reference.py
fox/caps/views/: base.py  mixins.py
fox/etl/: models.py  notes.md  pandas.py  pool.py  record_set.py  relation.py  utils.py
fox/etl/load/: model_record_set.py  pool.py  record_set.py  relation.py
fox/etl/operators/: __init__.py  base.py  relation.py
fox/etl/serializers/: base.py  fields.py
fox/etl/tests/: pandas.py
fox/etl/tests/app/: apps.py  models.py
fox/test/: file.py
fox/test/interface/: __init__.py  assume.py  dsl.py  injection.py  interface.py  traces.py  wrap.py
fox/test/thesis/: README.rst  __init__.py  assume.py  dsl.py  inject.py  interface.py  traces.py  wrap.py
fox/utils/: README.md  errors.py  functional.py  settings.py  test.py  tests.py
fox/utils/tests/: test_settings.py
fox_test/caps/: conftest.py
fox_test/caps/tests/models/: test_agent.py  test_capability.py  test_object.py  test_reference.py
instance/: settings_test.py
(+3 files in other folders)
